Remove warning